Try to update to JDK11 as well as fix some bower-dependency issue and add a missing check for ClusterResource when updating seeds
Remove redundant timeline.css (from older version of the package)

Remove JAXB dependency, add assertj dependency after upgrading the dropwizard to newer 1.3 release